# dgarbsutils

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  deploy.sh  setup.cfg
src/: requirements.txt
src/dgarbsutils/: Cloudwatch.py  DynamoDB.py  EventBridge.py  GraphMail.py  awsUtils.py  utils.py
src/dgutils/: utils.py
src/dvngrb-utils/: awsUtils.py
tests/: test_utils.py
tests/test_data/: test_data.csv
