[metadata]
name = utils-dvngrb
version = 0.0.1
author = Devon Garbalosa
author_email = devon.garbalosa@empower.com
description = A set of local utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgarbalo/py-utils
project_urls =
    Bug Tracker = https://github.com/dgarbalo/py-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
