[metadata]
name = dgarbsutils
version = 1.4.1
author = Devon Garbalosa
author_email = dgarbalo@gmail.com
description = A set of curated utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgarbalo/py-utils
project_urls =
    Bug Tracker = https://github.com/dgarbalo/py-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
testpaths =
    tests

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3
    botocore
    psycopg2-binary

[options.packages.find]
where = src
